Title vertical align fixed on mobile + setFullHeight()

--- a/css/style.css
+++ b/css/style.css
@@ -609,10 +609,12 @@ header {
 	.logo {
 		height: 30px;
 		padding-right: 0;
+		align-self: center;
 	}
 
 	.title {
 		font-size: 2.2em;
+		align-items: flex-end;
 	}
 
 	.rating-icon {
